diesel_compile_tests/tests/fail/mysql_on_conflict_tests.stderr
error[E0277]: `OnConflictValues<ValuesClause<..., ...>, ..., ...>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/mysql_on_conflict_tests.rs:42:18
     |
  LL |         .execute(&mut connection);
     |          ------- ^^^^^^^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is not implemented for `OnConflictValues<ValuesClause<..., ...>, ..., ...>`
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
help: the following other types implement trait `QueryFragment<DB, SP>`
    --> DIESEL/diesel/diesel/src/mysql/query_builder/query_fragment_impls.rs
     |
 LL | / impl<Values, Target, Action> QueryFragment<Mysql, MysqlOnConflictClause>
 LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
 LL | | where
 LL | |     Values: QueryFragment<Mysql>,
 LL | |     Target: QueryFragment<Mysql>,
 LL | |     Action: QueryFragment<Mysql>,
 LL | |     NoWhereClause: QueryFragment<Mysql>,
     | |________________________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>`
     |
    ::: DIESEL/diesel/diesel/src/query_builder/upsert/on_conflict_clause.rs
     |
  LL | / impl<DB, Values, Target, Action> QueryFragment<DB>
  LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
  LL | | where
  LL | |     DB: Backend,
  LL | |     DB::OnConflictClause: sql_dialect::on_conflict_clause::SupportsOnConflictClause,
  LL | |     Self: QueryFragment<DB, DB::OnConflictClause>,
     | |__________________________________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<DB>`
...
  LL | / impl<DB, Values, Target, Action, SD> QueryFragment<DB, SD>
  LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
  LL | | where
  LL | |     DB: Backend<OnConflictClause = SD>,
...    |
  LL | |     Target: QueryFragment<DB>,
  LL | |     Action: QueryFragment<DB>,
     | |______________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<DB, SD>`
...
 LL | / impl<DB, Values, Target, Action, Expr> QueryFragment<DB>
 LL | |     for OnConflictValues<Values, Target, Action, WhereClause<Expr>>
 LL | | where
 LL | |     DB: Backend,
...    |
 LL | |     Action: QueryFragment<DB>,
 LL | |     WhereClause<Expr>: QueryFragment<DB>,
     | |_________________________________________^ `OnConflictValues<Values, Target, Action, ...>` implements `QueryFragment<DB>`
     = note: required for `OnConflictValues<ValuesClause<..., ...>, ..., ...>` to implement `QueryFragment<Mysql>`
     = note: 1 redundant requirement hidden
     = note: required for `InsertStatement<table, ...>` to implement `QueryFragment<Mysql>`
     = note: required for `InsertStatement<table, ...>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     
error[E0277]: `OnConflictValues<ValuesClause<..., ...>, ..., ...>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/mysql_on_conflict_tests.rs:49:18
     |
  LL |         .execute(&mut connection);
     |          ------- ^^^^^^^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is not implemented for `OnConflictValues<ValuesClause<..., ...>, ..., ...>`
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
help: the following other types implement trait `QueryFragment<DB, SP>`
    --> DIESEL/diesel/diesel/src/mysql/query_builder/query_fragment_impls.rs
     |
 LL | / impl<Values, Target, Action> QueryFragment<Mysql, MysqlOnConflictClause>
 LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
 LL | | where
 LL | |     Values: QueryFragment<Mysql>,
 LL | |     Target: QueryFragment<Mysql>,
 LL | |     Action: QueryFragment<Mysql>,
 LL | |     NoWhereClause: QueryFragment<Mysql>,
     | |________________________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>`
     |
    ::: DIESEL/diesel/diesel/src/query_builder/upsert/on_conflict_clause.rs
     |
  LL | / impl<DB, Values, Target, Action> QueryFragment<DB>
  LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
  LL | | where
  LL | |     DB: Backend,
  LL | |     DB::OnConflictClause: sql_dialect::on_conflict_clause::SupportsOnConflictClause,
  LL | |     Self: QueryFragment<DB, DB::OnConflictClause>,
     | |__________________________________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<DB>`
...
  LL | / impl<DB, Values, Target, Action, SD> QueryFragment<DB, SD>
  LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
  LL | | where
  LL | |     DB: Backend<OnConflictClause = SD>,
...    |
  LL | |     Target: QueryFragment<DB>,
  LL | |     Action: QueryFragment<DB>,
     | |______________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<DB, SD>`
...
 LL | / impl<DB, Values, Target, Action, Expr> QueryFragment<DB>
 LL | |     for OnConflictValues<Values, Target, Action, WhereClause<Expr>>
 LL | | where
 LL | |     DB: Backend,
...    |
 LL | |     Action: QueryFragment<DB>,
 LL | |     WhereClause<Expr>: QueryFragment<DB>,
     | |_________________________________________^ `OnConflictValues<Values, Target, Action, ...>` implements `QueryFragment<DB>`
     = note: required for `OnConflictValues<ValuesClause<..., ...>, ..., ...>` to implement `QueryFragment<Mysql>`
     = note: 1 redundant requirement hidden
     = note: required for `InsertStatement<table, ...>` to implement `QueryFragment<Mysql>`
     = note: required for `InsertStatement<table, ...>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     
error[E0277]: the trait bound `ConflictTarget<(..., ...)>: OnConflictTarget<...>` is not satisfied
   --> tests/fail/mysql_on_conflict_tests.rs:54:22
    |
 LL |         .on_conflict((dsl::DuplicatedKeys, name))
    |          ----------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `OnConflictTarget<users::table>` is not implemented for `ConflictTarget<(DuplicatedKeys, columns::name)>`
    = help: the following other types implement trait `OnConflictTarget<Table>`:
              `ConflictTarget<(T,)>` implements `OnConflictTarget<<T as Column>::Table>`
              `ConflictTarget<(_T, T)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3, T4)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3, T4, T5)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3, T4, T5, T6)>` implements `OnConflictTarget<<_T as Column>::Table>`
            and N others
note: required by a bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
   --> DIESEL/diesel/diesel/src/upsert/on_conflict_extension.rs
    |
LL |     pub fn on_conflict<Target>(self, target: Target) -> crate::dsl::OnConflict<Self, Target>
    |            ----------- required by a bound in this associated function
LL |     where
LL |         ConflictTarget<Target>: OnConflictTarget<T>,
    |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
 
    
error[E0277]: `OnConflictValues<ValuesClause<..., ...>, ..., ...>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/mysql_on_conflict_tests.rs:57:18
     |
  LL |         .execute(&mut connection);
     |          ------- ^^^^^^^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is not implemented for `OnConflictValues<ValuesClause<..., ...>, ..., ...>`
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
help: the following other types implement trait `QueryFragment<DB, SP>`
    --> DIESEL/diesel/diesel/src/mysql/query_builder/query_fragment_impls.rs
     |
 LL | / impl<Values, Target, Action> QueryFragment<Mysql, MysqlOnConflictClause>
 LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
 LL | | where
 LL | |     Values: QueryFragment<Mysql>,
 LL | |     Target: QueryFragment<Mysql>,
 LL | |     Action: QueryFragment<Mysql>,
 LL | |     NoWhereClause: QueryFragment<Mysql>,
     | |________________________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>`
     |
    ::: DIESEL/diesel/diesel/src/query_builder/upsert/on_conflict_clause.rs
     |
  LL | / impl<DB, Values, Target, Action> QueryFragment<DB>
  LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
  LL | | where
  LL | |     DB: Backend,
  LL | |     DB::OnConflictClause: sql_dialect::on_conflict_clause::SupportsOnConflictClause,
  LL | |     Self: QueryFragment<DB, DB::OnConflictClause>,
     | |__________________________________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<DB>`
...
  LL | / impl<DB, Values, Target, Action, SD> QueryFragment<DB, SD>
  LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
  LL | | where
  LL | |     DB: Backend<OnConflictClause = SD>,
...    |
  LL | |     Target: QueryFragment<DB>,
  LL | |     Action: QueryFragment<DB>,
     | |______________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<DB, SD>`
...
 LL | / impl<DB, Values, Target, Action, Expr> QueryFragment<DB>
 LL | |     for OnConflictValues<Values, Target, Action, WhereClause<Expr>>
 LL | | where
 LL | |     DB: Backend,
...    |
 LL | |     Action: QueryFragment<DB>,
 LL | |     WhereClause<Expr>: QueryFragment<DB>,
     | |_________________________________________^ `OnConflictValues<Values, Target, Action, ...>` implements `QueryFragment<DB>`
     = note: required for `OnConflictValues<ValuesClause<..., ...>, ..., ...>` to implement `QueryFragment<Mysql>`
     = note: 1 redundant requirement hidden
     = note: required for `InsertStatement<table, ...>` to implement `QueryFragment<Mysql>`
     = note: required for `InsertStatement<table, ...>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     
error[E0277]: `OnConflictValues<ValuesClause<..., ...>, ..., ...>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/mysql_on_conflict_tests.rs:65:18
     |
  LL |         .execute(&mut connection);
     |          ------- ^^^^^^^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is not implemented for `OnConflictValues<ValuesClause<..., ...>, ..., ...>`
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
help: the following other types implement trait `QueryFragment<DB, SP>`
    --> DIESEL/diesel/diesel/src/mysql/query_builder/query_fragment_impls.rs
     |
 LL | / impl<Values, Target, Action> QueryFragment<Mysql, MysqlOnConflictClause>
 LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
 LL | | where
 LL | |     Values: QueryFragment<Mysql>,
 LL | |     Target: QueryFragment<Mysql>,
 LL | |     Action: QueryFragment<Mysql>,
 LL | |     NoWhereClause: QueryFragment<Mysql>,
     | |________________________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>`
     |
    ::: DIESEL/diesel/diesel/src/query_builder/upsert/on_conflict_clause.rs
     |
  LL | / impl<DB, Values, Target, Action> QueryFragment<DB>
  LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
  LL | | where
  LL | |     DB: Backend,
  LL | |     DB::OnConflictClause: sql_dialect::on_conflict_clause::SupportsOnConflictClause,
  LL | |     Self: QueryFragment<DB, DB::OnConflictClause>,
     | |__________________________________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<DB>`
...
  LL | / impl<DB, Values, Target, Action, SD> QueryFragment<DB, SD>
  LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
  LL | | where
  LL | |     DB: Backend<OnConflictClause = SD>,
...    |
  LL | |     Target: QueryFragment<DB>,
  LL | |     Action: QueryFragment<DB>,
     | |______________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<DB, SD>`
...
 LL | / impl<DB, Values, Target, Action, Expr> QueryFragment<DB>
 LL | |     for OnConflictValues<Values, Target, Action, WhereClause<Expr>>
 LL | | where
 LL | |     DB: Backend,
...    |
 LL | |     Action: QueryFragment<DB>,
 LL | |     WhereClause<Expr>: QueryFragment<DB>,
     | |_________________________________________^ `OnConflictValues<Values, Target, Action, ...>` implements `QueryFragment<DB>`
     = note: required for `OnConflictValues<ValuesClause<..., ...>, ..., ...>` to implement `QueryFragment<Mysql>`
     = note: 1 redundant requirement hidden
     = note: required for `InsertStatement<table, ...>` to implement `QueryFragment<Mysql>`
     = note: required for `InsertStatement<table, ...>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     
error[E0277]: `OnConflictValues<ValuesClause<..., ...>, ..., ...>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/mysql_on_conflict_tests.rs:74:18
     |
  LL |         .execute(&mut connection);
     |          ------- ^^^^^^^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is not implemented for `OnConflictValues<ValuesClause<..., ...>, ..., ...>`
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
help: the following other types implement trait `QueryFragment<DB, SP>`
    --> DIESEL/diesel/diesel/src/mysql/query_builder/query_fragment_impls.rs
     |
 LL | / impl<Values, Target, Action> QueryFragment<Mysql, MysqlOnConflictClause>
 LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
 LL | | where
 LL | |     Values: QueryFragment<Mysql>,
 LL | |     Target: QueryFragment<Mysql>,
 LL | |     Action: QueryFragment<Mysql>,
 LL | |     NoWhereClause: QueryFragment<Mysql>,
     | |________________________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>`
     |
    ::: DIESEL/diesel/diesel/src/query_builder/upsert/on_conflict_clause.rs
     |
  LL | / impl<DB, Values, Target, Action> QueryFragment<DB>
  LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
  LL | | where
  LL | |     DB: Backend,
  LL | |     DB::OnConflictClause: sql_dialect::on_conflict_clause::SupportsOnConflictClause,
  LL | |     Self: QueryFragment<DB, DB::OnConflictClause>,
     | |__________________________________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<DB>`
...
  LL | / impl<DB, Values, Target, Action, SD> QueryFragment<DB, SD>
  LL | |     for OnConflictValues<Values, Target, Action, NoWhereClause>
  LL | | where
  LL | |     DB: Backend<OnConflictClause = SD>,
...    |
  LL | |     Target: QueryFragment<DB>,
  LL | |     Action: QueryFragment<DB>,
     | |______________________________^ `OnConflictValues<Values, Target, Action>` implements `QueryFragment<DB, SD>`
...
 LL | / impl<DB, Values, Target, Action, Expr> QueryFragment<DB>
 LL | |     for OnConflictValues<Values, Target, Action, WhereClause<Expr>>
 LL | | where
 LL | |     DB: Backend,
...    |
 LL | |     Action: QueryFragment<DB>,
 LL | |     WhereClause<Expr>: QueryFragment<DB>,
     | |_________________________________________^ `OnConflictValues<Values, Target, Action, ...>` implements `QueryFragment<DB>`
     = note: required for `OnConflictValues<ValuesClause<..., ...>, ..., ...>` to implement `QueryFragment<Mysql>`
     = note: 1 redundant requirement hidden
     = note: required for `InsertStatement<table, ...>` to implement `QueryFragment<Mysql>`
     = note: required for `InsertStatement<table, ...>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     
error[E0277]: `ConflictTarget<DuplicatedKeys>` is no valid SQL fragment for the `Pg` backend
    --> tests/fail/mysql_on_conflict_tests.rs:84:18
     |
  LL |         .execute(&mut connection);
     |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `ConflictTarget<DuplicatedKeys>`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Pg` database system does not support 
             this SQL syntax
help: the trait `QueryFragment<Pg, diesel::query_builder::private::NotSpecialized>` is not implemented for `ConflictTarget<DuplicatedKeys>`
      but trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is implemented for it
    --> DIESEL/diesel/diesel/src/mysql/query_builder/query_fragment_impls.rs
     |
 LL | impl QueryFragment<Mysql, MysqlOnConflictClause> for ConflictTarget<DuplicatedKeys> {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     = note: required for `OnConflictValues<ValuesClause<..., ...>, ..., ...>` to implement `QueryFragment<Pg, pg::backend::PgOnConflictClause>`
     = note: 2 redundant requirements hidden
     = note: required for `InsertStatement<table, ...>` to implement `QueryFragment<Pg>`
     = note: required for `InsertStatement<table, ...>` to implement `ExecuteDsl<diesel::PgConnection, Pg>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     
error[E0277]: the trait bound `ConflictTarget<(name, ...)>: OnConflictTarget<...>` is not satisfied
   --> tests/fail/mysql_on_conflict_tests.rs:89:22
    |
 LL |         .on_conflict((name, dsl::DuplicatedKeys))
    |          ----------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `OnConflictTarget<users::table>` is not implemented for `ConflictTarget<(columns::name, DuplicatedKeys)>`
    = help: the following other types implement trait `OnConflictTarget<Table>`:
              `ConflictTarget<(T,)>` implements `OnConflictTarget<<T as Column>::Table>`
              `ConflictTarget<(_T, T)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3, T4)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3, T4, T5)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3, T4, T5, T6)>` implements `OnConflictTarget<<_T as Column>::Table>`
            and N others
note: required by a bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
   --> DIESEL/diesel/diesel/src/upsert/on_conflict_extension.rs
    |
LL |     pub fn on_conflict<Target>(self, target: Target) -> crate::dsl::OnConflict<Self, Target>
    |            ----------- required by a bound in this associated function
LL |     where
LL |         ConflictTarget<Target>: OnConflictTarget<T>,
    |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
 
    
error[E0277]: `ConflictTarget<(columns::name, DuplicatedKeys)>` is no valid SQL fragment for the `Pg` backend
    --> tests/fail/mysql_on_conflict_tests.rs:92:18
     |
  LL |         .execute(&mut connection);
     |          ------- ^^^^^^^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `QueryFragment<Pg>` is not implemented for `ConflictTarget<(columns::name, DuplicatedKeys)>`
     = note: this usually means that the `Pg` database system does not support 
             this SQL syntax
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               `ConflictTarget<(T,)>` implements `QueryFragment<DB, SP>`
               `ConflictTarget<(_T, T)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1, T2)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1, T2, T3)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1, T2, T3, T4)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1, T2, T3, T4, T5)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1, T2, T3, T4, T5, T6)>` implements `QueryFragment<_DB, _SP>`
             and N others
     = note: required for `OnConflictValues<ValuesClause<..., ...>, ..., ...>` to implement `QueryFragment<Pg, pg::backend::PgOnConflictClause>`
     = note: 2 redundant requirements hidden
     = note: required for `InsertStatement<table, ...>` to implement `QueryFragment<Pg>`
     = note: required for `InsertStatement<table, ...>` to implement `ExecuteDsl<diesel::PgConnection, Pg>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     
error[E0277]: the trait bound `ConflictTarget<(..., ...)>: OnConflictTarget<...>` is not satisfied
   --> tests/fail/mysql_on_conflict_tests.rs:97:22
    |
 LL |         .on_conflict((dsl::DuplicatedKeys, name))
    |          ----------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `OnConflictTarget<users::table>` is not implemented for `ConflictTarget<(DuplicatedKeys, columns::name)>`
    = help: the following other types implement trait `OnConflictTarget<Table>`:
              `ConflictTarget<(T,)>` implements `OnConflictTarget<<T as Column>::Table>`
              `ConflictTarget<(_T, T)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3, T4)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3, T4, T5)>` implements `OnConflictTarget<<_T as Column>::Table>`
              `ConflictTarget<(_T, T, T1, T2, T3, T4, T5, T6)>` implements `OnConflictTarget<<_T as Column>::Table>`
            and N others
note: required by a bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
   --> DIESEL/diesel/diesel/src/upsert/on_conflict_extension.rs
    |
LL |     pub fn on_conflict<Target>(self, target: Target) -> crate::dsl::OnConflict<Self, Target>
    |            ----------- required by a bound in this associated function
LL |     where
LL |         ConflictTarget<Target>: OnConflictTarget<T>,
    |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
 
    
error[E0277]: `ConflictTarget<(DuplicatedKeys, columns::name)>` is no valid SQL fragment for the `Pg` backend
    --> tests/fail/mysql_on_conflict_tests.rs:100:18
     |
 LL |         .execute(&mut connection);
     |          ------- ^^^^^^^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `QueryFragment<Pg>` is not implemented for `ConflictTarget<(DuplicatedKeys, columns::name)>`
     = note: this usually means that the `Pg` database system does not support 
             this SQL syntax
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               `ConflictTarget<(T,)>` implements `QueryFragment<DB, SP>`
               `ConflictTarget<(_T, T)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1, T2)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1, T2, T3)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1, T2, T3, T4)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1, T2, T3, T4, T5)>` implements `QueryFragment<_DB, _SP>`
               `ConflictTarget<(_T, T, T1, T2, T3, T4, T5, T6)>` implements `QueryFragment<_DB, _SP>`
             and N others
     = note: required for `OnConflictValues<ValuesClause<..., ...>, ..., ...>` to implement `QueryFragment<Pg, pg::backend::PgOnConflictClause>`
     = note: 2 redundant requirements hidden
     = note: required for `InsertStatement<table, ...>` to implement `QueryFragment<Pg>`
     = note: required for `InsertStatement<table, ...>` to implement `ExecuteDsl<diesel::PgConnection, Pg>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     For more information about this error, try `rustc --explain E0277`.
